dist/1.0/bin/sample/retrieveUnpackaged/objects/Lead_Product__c.object
<CustomObject>
    <fields>
        <fullName>CProduct__c</fullName>
        <label>Product (custom)</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Lead Products</relationshipLabel>
        <relationshipName>Lead_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Products</relationshipLabel>
        <relationshipName>Lead_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lead Products</relationshipLabel>
        <relationshipName>Lead_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this product will be converted to Opportunity Product</description>
        <inlineHelpText>If checked, this product will be converted to Opportunity Product</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead Product</label>
    <nameField>
        <label>Lead Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>